# calculator

./: .gitignore  CC BY-NC-ND 4.0.xmp  license
calculator/: CMakeLists.txt  calc.c  calc.h  linkedList.h  main.c  main.h
